# text-to-sparql-on-neptune-with-uniprot

./: README.md  compare_expected_gen.ipynb  comparison.html  explicit_schema.ipynb  get_expected_results.ipynb  implicit-schema.ipynb  pyproject.toml  run_gen_tests.ipynb  uniprot_loader.ipynb  utilities.py
gen_results/: 0.json  1.json  10.json  10_1.json  11.json  11_1.json  11_2.json  12.json  13.json  14.json  15.json  15_1.json  16.json  17.json  18.json  18_1.json  18_2.json  18_3.json  19.json  19_1.json  19_2.json  2.json  20_1.json  21.json  21_1.json  22.json  22_1.json  22_2.json  22_3.json  23.json  23_1.json  23_2.json  23_3.json  24.json  25.json  26.json  28.json  29.json  29_1.json  3.json  (+41 more)
resources/: ground-truth.yaml  prefixes.txt  prompt.txt  prompt.yaml  prompt2.yaml  prompt3.yaml  tips.yaml
up/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  5.json  (+4 more)
