[tool.poetry]
name = "sparql-generation"
version = "0.1.0"
description = ""
authors = ["Simon Handley <simongh@amazon.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.58"
botocore = "^1.34.58"
jupyter = "^1.0.0"
sagemaker = "^2.212.0"
jinja2 = "^3.1.3"
ipykernel = "^6.29.3"
awswrangler = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
